# kursa4_6_skypro

./: .env.sample  .gitignore  groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailingservice/: admin.py  apps.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailingservice/migrations/: 0001_initial.py  0002_alter_mailing_options_mailing_finished_at_and_more.py  0002_client_owner_mailing_owner_message_owner.py  0003_alter_mailing_options.py  0004_alter_mailing_options.py  0005_mailing_is_active.py  0006_mailing_time.py  0007_alter_mailing_time.py  0008_alter_attempt_options.py
mailingservice/templates/mailingservice/: client_base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_stats.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailingservice/templates/mailingservice/includes/: inc_footer.html  inc_header.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_email.py
users/templates/users/: user_confirm_delete.html  user_detail.html  user_form.html  user_list.html  user_login.html
