[tool.poetry]
name = "hw21-1-project-ms"
version = "0.1.0"
description = "Next of practice w Django"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
ipython = "^8.27.0"
pillow = "^10.4.0"
pytils = "^0.4.1"
django-crontab = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
